--- a/src/components/dialog-component/sub-components/dialog-sub-components.scss
+++ b/src/components/dialog-component/sub-components/dialog-sub-components.scss
@@ -9,7 +9,7 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    padding: 0 1rem;
+    padding: 1rem 1.5rem;
     .dialog-close-icon {
       cursor: pointer;
     }
@@ -25,6 +25,6 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    padding: 0 1rem;
+    padding: 1rem 1.5rem;
   }
 }
