--- a/src/components/dialog-component/dialog-component.scss
+++ b/src/components/dialog-component/dialog-component.scss
@@ -2,11 +2,11 @@
   background-color: rgba(0, 0, 0, 0.308);
   height: 100vh;
   width: 100%;
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 0;
+  bottom: 0;
   left: 0;
   z-index: 22;
   .dialog-container {
