--- a/src/components/dialog-component/dialog-component.scss
+++ b/src/components/dialog-component/dialog-component.scss
@@ -16,10 +16,11 @@
     background-color: white;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
   }
   .dialog-content {
     height: 100%;
     align-self: stretch;
-    overflow-y: scroll;
+    overflow-y: unset;
   }
 }
