--- a/src/components/dialog-component/sub-components/dialog-sub-components.scss
+++ b/src/components/dialog-component/sub-components/dialog-sub-components.scss
@@ -2,7 +2,6 @@
   width: 100%;
   height: 50px;
   //   background-color: rgb(50, 102, 102);
-  border-radius: 5px 5px 0 0;
   border-bottom: 1px solid rgb(202, 202, 202);
   .dialog-header-container {
     display: flex;
@@ -10,6 +9,8 @@
     align-items: center;
     height: 100%;
     padding: 1rem 1.5rem;
+    background-color: white;
+    border-radius: 5px 5px 0 0;
     .dialog-close-icon {
       cursor: pointer;
     }
@@ -20,6 +21,7 @@
   height: 50px;
   border-radius: 0 0 5px 5px;
   border-top: 1px solid rgb(202, 202, 202);
+  background-color: white;
   .dialog-bottom-container {
     display: flex;
     justify-content: space-between;
