--- a/src/features/product-picker/presentation/product-list.scss
+++ b/src/features/product-picker/presentation/product-list.scss
@@ -1,5 +1,10 @@
 .search-container {
   padding: 0.5rem 1.5rem;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 111;
+  background-color: white;
 }
 .loader-container{
   text-align: center;
